tests/fixtures/LatestTests/ObjectTests/errors/assign_to_const_nested_object.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
type Inner = {
    data: str
}

type Outer = {
    inner: Inner
}

const outer: Outer = {
    inner: {
        data: "test"
    }
}

outer.inner.data = "modified"
